test/deca/context/valid/3_31_print_string.deca
// Description:
//   test d'argument de print
// 
// Résultat : 
// Affiche un string

{
    print("coucou");

}