test/deca/context/invalid/3_31_print_string_d.deca
// Description:
//   test d'argument de print
// 
// Résultat : 
// Affiche un string

{
    string s = "coucou";
    print(s);

}